--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Hacker-AI</title>
-    <meta name="description" content="Pre-test your ShowHN post before publishing to increase the chance of hitting high points.">
+    <meta name="description" content="Pre-test your Hacker News Show HN title before publishing to increase the chance of hitting high points.">
     <meta name="keywords" content="AI, predictions, optimization, A/B testing, pre-testing">
     <meta name="author" content="Kimmo Ihanus">
     <meta charset="utf-8">
@@ -44,8 +44,10 @@
     <div class="container">
       <div class="row">
       <div class="mt1">
-         <h1>Pre-test your ShowHN post before publishing and increase your points.</h1>
+         <h1>Pre-test your ShowHN title variations before publishing.</h1>
+         <p style="font-size: 1.2rem;">Increase your chances of hitting high points on Hacker News!</p>
       </div>
+
     </div>
     </div>
     <form onsubmit="return false">
@@ -138,6 +140,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
     <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt=""/></noscript>
-    
+
 </body>
 </html>
