--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </ul>
 
           <span class="navbar-text">
-            <a class="nav-link" href="https://www.github.com" target="_blank">  <i class="fa fa-1x fa-github" aria-hidden="true"></i></a>    
+            <a class="nav-link" href="https://github.com/Grew-dev/hacker-ai" target="_blank">  <i class="fa fa-1x fa-github" aria-hidden="true"></i></a>    
           </span>
       </nav>
 
