--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container">
       <div class="row">
       <div class="mt1">
-         <h1>Pre-test your ShowHN title variations before publishing.</h1>
+         <h1>Test your Hacker News titles with AI before publishing.</h1>
          <p style="font-size: 1.2rem;">Increase your chances of hitting high points on Hacker News!</p>
       </div>
 
