updated sa events

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
+    <script>window.sa_event=window.sa_event||function(){a=[].slice.call(arguments);sa_event.q?sa_event.q.push(a):sa_event.q=[a]};</script>
+
 </head>
 <body>
 
@@ -57,7 +59,7 @@
             <label for="title">Title A</label>
           </div>
           <div class="col-md-10 form-group">
-            <input class="form-control" name="titleA" id="titleA" autocomplete="off" placeholder="Show HN: My new AI tool rocks!" required/> 
+            <input class="form-control" name="titleA" id="titleA" autocomplete="off" placeholder="Show HN: My new AI tool rocks!" maxlength="80" required/> 
           </div>
         </div>
       </div> 
@@ -67,7 +69,7 @@
             <label for="titleB">Title B</label>
           </div>
           <div class="col-md-10 form-group">
-            <input class="form-control" name="titleB" id="titleB" autocomplete="off" placeholder="Show HN: AI optimizer tool" required/>
+            <input class="form-control" name="titleB" id="titleB" autocomplete="off" placeholder="Show HN: AI optimizer tool" maxlength="80" required/>
           </div>
         </div>
       </div>
