--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="row">
       <div class="mt1">
          <h1>Test your Hacker News titles with AI before publishing.</h1>
-         <p style="font-size: 1.2rem;">Increase your chances of hitting high points on Hacker News!</p>
+         <p style="font-size: 1.2rem;">If you're uncertain about what title to use, trust statistical mathematics. Increase your chances of hitting high points on Hacker News!</p>
       </div>
 
     </div>
