added product hunt badge

--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
         </form>
         
       </div>
+      
     </div>
+    <a href="https://www.producthunt.com/posts/hacker-ai?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-hacker-ai" target="_blank"><img style="margin-top: 20px;"  src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=276168&theme=light" alt="Hacker-AI - Test your HackerNews titles with AI before publishing | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
   </div>
   
 
