--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
           </ul>
 
           <span class="navbar-text">
-            <a class="nav-link" href="https://github.com/Grew-dev/hacker-ai" target="_blank">  <i class="fa fa-1x fa-github" aria-hidden="true"></i></a>    
+            <a class="nav-link" href="https://github.com/Grew-dev/hacker-ai" target="_blank">  <i class="fa fa-2x fa-github" aria-hidden="true"></i></a>    
+          </span>
+          <span class=navbar-text">
+            <a href="https://www.producthunt.com/posts/hacker-ai?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-hacker-ai" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=276168&theme=light" alt="Hacker-AI - Test your HackerNews titles with AI before publishing | Product Hunt" style="width: 250px; height: 54px;" width="190" height="54" /></a>
           </span>
       </nav>
 
@@ -48,6 +51,7 @@
       <div class="mt1">
          <h1>Test your Hacker News titles with AI before publishing.</h1>
          <p style="font-size: 1.2rem;">If you're uncertain about what title to use, trust statistical mathematics. Increase your chances of hitting high points on Hacker News!</p>
+        <a href="https://www.hacker.ai/description.html">Read how it works &raquo;</a> 
       </div>
 
     </div>
@@ -58,8 +62,11 @@
           <div class="col-md-2 form-group">
             <label for="title">Title A</label>
           </div>
-          <div class="col-md-10 form-group">
+          <div class="col-md-8 form-group">
             <input class="form-control" name="titleA" id="titleA" autocomplete="off" placeholder="Show HN: My new AI tool rocks!" maxlength="80" required/> 
+          </div>
+          <div class="col-md-2 form-group">
+            <p id="scoreA"></p>
           </div>
         </div>
       </div> 
@@ -68,8 +75,11 @@
           <div class="col-md-2 form-group">
             <label for="titleB">Title B</label>
           </div>
-          <div class="col-md-10 form-group">
+          <div class="col-md-8 form-group">
             <input class="form-control" name="titleB" id="titleB" autocomplete="off" placeholder="Show HN: AI optimizer tool" maxlength="80" required/>
+          </div>
+          <div class="col-md-2 form-group">
+            <p id="scoreB"></p>
           </div>
         </div>
       </div>
@@ -115,7 +125,7 @@
       </div>
       
     </div>
-    <a href="https://www.producthunt.com/posts/hacker-ai?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-hacker-ai" target="_blank"><img style="margin-top: 20px;"  src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=276168&theme=light" alt="Hacker-AI - Test your HackerNews titles with AI before publishing | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
+    <!-- <a href="https://www.producthunt.com/posts/hacker-ai?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-hacker-ai" target="_blank"><img style="margin-top: 20px;"  src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=276168&theme=light" alt="Hacker-AI - Test your HackerNews titles with AI before publishing | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a> -->
   </div>
   
 
