--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="mt1">
          <h1>Test your Hacker News titles with AI before publishing.</h1>
          <p style="font-size: 1.2rem;">If you're uncertain about what title to use, trust statistical mathematics. Increase your chances of hitting high points on Hacker News!</p>
-        <a href="https://www.hacker.ai/description.html">Read how it works &raquo;</a> 
+        <a href="https://github.com/Grew-dev/hacker-ai/blob/main/README.md" target="_blank">Read how it works &raquo;</a> 
       </div>
 
     </div>
