--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="container">
       <div class="row">
       <div class="mt1">
-         <h1>Test your Hacker News titles with AI before publishing.</h1>
+         <h1>A/B Test your Hacker News titles with AI before publishing.</h1>
          <p style="font-size: 1.2rem;">If you're uncertain about what title to use, trust statistical mathematics. Increase your chances of hitting high points on Hacker News!</p>
         <a href="https://github.com/Grew-dev/hacker-ai/blob/main/README.md" target="_blank">Read how it works &raquo;</a> 
       </div>
